# cv-generator

./: .gitignore  DEPLOYMENT.md  LICENSE  Procfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.bat  setup.py  test_import.py
cv_generator/: app.py
static/css/: style.css
static/js/: script.js
templates/: index.html  success.html
