[tool.poetry]
name = "cv-generator"
version = "0.1.0"
description = "Professional CV Generator"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "cv_generator"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
Flask = "2.3.3"
python-docx = "0.8.11"
reportlab = "4.0.4"
Pillow = "^10.5.0"
Werkzeug = "2.3.7"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"